# hestiaos-mathdoc

./: .gitignore  LICENSE  PROVENANCE.md  README.md  SECURITY.md  mathdoc_mcp.py  package-lock.json  package.json  pyproject.toml  render_math.cjs
.github/workflows/: ci.yml
mathdoc/: __init__.py  core.py  server.py
tests/: test_markdown.py  test_pipeline.py  test_renderer.py
