[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mathdoc"
version = "0.1.0"
description = "Markdown + LaTeX → PDF pipeline — MathJax rendering, hestiaOS corporate design"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "HestiaOS Team"},
]

dependencies = [
    "markdown>=3.5",
    "weasyprint>=60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
mcp = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/hestiaos/hestiaos-mathdoc"

[tool.setuptools.packages.find]
where = ["."]
include = ["mathdoc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
